# gr-matchstiq

./: CMakeLists.txt  README  README.md
docs/: README.matchstiq
docs/doxygen/: Doxyfile.in
docs/doxygen/html/: index.html  navtree.js
docs/doxygen/latex/: doxygen.sty  refman.tex
docs/doxygen/other/: group_defs.dox  main_page.dox
grc/: CMakeLists.txt  matchstiq_source_s.xml
include/matchstiq/: CMakeLists.txt  api.h  matchstiq_defs.h  matchstiq_source_s.h
lib/: CMakeLists.txt  matchstiq.cc  matchstiq.h  matchstiq_source_s_impl.cc  matchstiq_source_s_impl.h  srfs_interface.cc  srfs_interface.h
python/: CMakeLists.txt  __init__.py
swig/: CMakeLists.txt  matchstiq_swig.i
